--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "cross-env": "^3.2.4",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "react-maskedinput": "^3.3.4",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.0.0-beta.8",
     "react-scrollable-anchor": "^0.4.2",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.3",
     "webpack": "^2.3.1",
     "webpack-dev-server": "^2.5.0",
@@ -54,6 +57,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-scrollable-anchor": "^0.4.2",
     "react-slick": "^0.14.7",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
